// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/layout/demo/basic.md correctly 1`] = `
<div>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
    >
      Header
    </header>
    <main
      class="ant-layout-content"
    >
      Content
    </main>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </section>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
    >
      Header
    </header>
    <section
      class="ant-layout"
    >
      <aside
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </aside>
      <main
        class="ant-layout-content"
      >
        Content
      </main>
    </section>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </section>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
    >
      Header
    </header>
    <section
      class="ant-layout"
    >
      <main
        class="ant-layout-content"
      >
        Content
      </main>
      <aside
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </aside>
    </section>
    <footer
      class="ant-layout-footer"
    >
      Footer
    </footer>
  </section>
  <section
    class="ant-layout"
  >
    <aside
      class="ant-layout-sider ant-layout-sider-dark"
      style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        Sider
      </div>
    </aside>
    <section
      class="ant-layout"
    >
      <header
        class="ant-layout-header"
      >
        Header
      </header>
      <main
        class="ant-layout-content"
      >
        Content
      </main>
      <footer
        class="ant-layout-footer"
      >
        Footer
      </footer>
    </section>
  </section>
</div>
`;

exports[`renders ./components/layout/demo/custom-trigger.md correctly 1`] = `
<section
  class="ant-layout"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-user-o"
              />
            </svg>
          </span>
          <span>
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-video-camera-o"
              />
            </svg>
          </span>
          <span>
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-upload-o"
              />
            </svg>
          </span>
          <span>
            nav 3
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    >
      <span
        class="anticon trigger"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-menu-fold-o"
          />
        </svg>
      </span>
    </header>
    <main
      class="ant-layout-content"
      style="margin:24px 16px;padding:24px;background:#fff;min-height:280px"
    >
      Content
    </main>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/fixed.md correctly 1`] = `
<section
  class="ant-layout"
>
  <header
    class="ant-layout-header"
    style="position:fixed;z-index:1;width:100%"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <main
    class="ant-layout-content"
    style="padding:0 50px;margin-top:64px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:380px"
    >
      Content
    </div>
  </main>
  <footer
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </footer>
</section>
`;

exports[`renders ./components/layout/demo/fixed-sider.md correctly 1`] = `
<section
  class="ant-layout"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark"
    style="overflow:auto;height:100vh;position:fixed;left:0;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-user-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-video-camera-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-upload-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-bar-chart-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-cloud-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 5
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-appstore-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 6
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-team-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 7
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-shop-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 8
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    class="ant-layout"
    style="margin-left:200px"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <main
      class="ant-layout-content"
      style="margin:24px 16px 0;overflow:initial"
    >
      <div
        style="padding:24px;background:#fff;text-align:center"
      >
        ...
        <br />
        Really
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        long
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        content
      </div>
    </main>
    <footer
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </footer>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/responsive.md correctly 1`] = `
<section
  class="ant-layout"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-user-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-video-camera-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-upload-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-user-o"
              />
            </svg>
          </span>
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <main
      class="ant-layout-content"
      style="margin:24px 16px 0"
    >
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        content
      </div>
    </main>
    <footer
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </footer>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/side.md correctly 1`] = `
<section
  class="ant-layout"
  style="min-height:100vh"
>
  <aside
    class="ant-layout-sider ant-layout-sider-dark ant-layout-sider-has-trigger"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-pie-chart-o"
              />
            </svg>
          </span>
          <span>
            Option 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-desktop-o"
              />
            </svg>
          </span>
          <span>
            Option 2
          </span>
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <span
                class="anticon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#icon-user-o"
                  />
                </svg>
              </span>
              <span>
                User
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <span
                class="anticon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#icon-team-o"
                  />
                </svg>
              </span>
              <span>
                Team
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <span
            class="anticon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#icon-file-o"
              />
            </svg>
          </span>
          <span>
            File
          </span>
        </li>
      </ul>
    </div>
    <div
      class="ant-layout-sider-trigger"
      style="width:200px"
    >
      <span
        aria-label="left"
        class="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </div>
  </aside>
  <section
    class="ant-layout"
  >
    <header
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <main
      class="ant-layout-content"
      style="margin:0 16px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            User
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Bill
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        Bill is a cat.
      </div>
    </main>
    <footer
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </footer>
  </section>
</section>
`;

exports[`renders ./components/layout/demo/top.md correctly 1`] = `
<section
  class="layout ant-layout"
>
  <header
    class="ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <main
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:280px"
    >
      Content
    </div>
  </main>
  <footer
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </footer>
</section>
`;

exports[`renders ./components/layout/demo/top-side.md correctly 1`] = `
<section
  class="ant-layout"
>
  <header
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <main
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <section
      class="ant-layout"
      style="padding:24px 0;background:#fff"
    >
      <aside
        class="ant-layout-sider ant-layout-sider-dark"
        style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          <ul
            class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
            role="menu"
            style="height:100%"
          >
            <li
              class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
              role="menuitem"
            >
              <div
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="sub1$Menu"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <span
                    class="anticon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-user-o"
                      />
                    </svg>
                  </span>
                  subnav 1
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <ul
                class="ant-menu  ant-menu-sub ant-menu-inline"
                id="sub1$Menu"
                role="menu"
              >
                <li
                  class="ant-menu-item ant-menu-item-selected"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option1
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option2
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option3
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option4
                </li>
              </ul>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <span
                    class="anticon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-laptop-o"
                      />
                    </svg>
                  </span>
                  subnav 2
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <span
                    class="anticon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#icon-notification-o"
                      />
                    </svg>
                  </span>
                  subnav 3
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
          </ul>
        </div>
      </aside>
      <main
        class="ant-layout-content"
        style="padding:0 24px;min-height:280px"
      >
        Content
      </main>
    </section>
  </main>
  <footer
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </footer>
</section>
`;

exports[`renders ./components/layout/demo/top-side-2.md correctly 1`] = `
<section
  class="ant-layout"
>
  <header
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </header>
  <section
    class="ant-layout"
  >
    <aside
      class="ant-layout-sider ant-layout-sider-dark"
      style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        <ul
          class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          role="menu"
          style="height:100%;border-right:0"
        >
          <li
            class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
            role="menuitem"
          >
            <div
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="sub1$Menu"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <span
                  class="anticon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-user-o"
                    />
                  </svg>
                </span>
                subnav 1
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <ul
              class="ant-menu  ant-menu-sub ant-menu-inline"
              id="sub1$Menu"
              role="menu"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
                style="padding-left:48px"
              >
                option1
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option2
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option3
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option4
              </li>
            </ul>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <span
                  class="anticon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-laptop-o"
                    />
                  </svg>
                </span>
                subnav 2
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <span
                  class="anticon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-notification-o"
                    />
                  </svg>
                </span>
                subnav 3
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
        </ul>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="padding:0 24px 24px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Home
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            List
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            App
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <main
        class="ant-layout-content"
        style="background:#fff;padding:24px;margin:0;min-height:280px"
      >
        Content
      </main>
    </section>
  </section>
</section>
`;
